# prokofyev-cg-lab1

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  cube-cw.cc  orig-cw.cc  orig.cc  pyramid.cc
src/include/: orig.h  pyramid.h
